# SDL_Engine

./: .gitignore  CMakeLists.txt  README.md  todo.txt
cmake/: RuntimeDlls.cmake
scripts/model_loader/: check.py  convert_model.py  fix_normals.py
src/engine/: CMakeLists.txt
src/engine/include/: Aliases.h  BaseComponents.h  BatchBuilder.h  BoundSphereDataModule.h  BufferData.h  BufferManager.h  BufferUpdateStruct.h  Camera.h  CameraManager.h  CameraStruct.h  CountBufferDataModule.h  DefaultRenderPassSet.h  DefaultUpdateSet.h  Engine.h  EngineContext.h  FPSCounter.h  InderectDataModule.h  LightDataModule.h  LightStruct.h  MaterialData.h  MaterialManager.h  ModelData.h  ModelManager.h  ModeleDataModule.h  ObjectManager.h  ObjectManager.inl  OrderedMap.h  PCH.h  PIB_DataModule.h  PipeManager.h  PositionStructure.h  RenderCommandData.h  RenderManager.h  ResourceManager.h  SceneData.h  ShaderData.h  ShaderManager.h  SlotController.h  TextureData.h  TextureManager.h  (+7 more)
src/engine/include/Новая папка/: MaterialData.h  MaterialManager.h  ObjectManager.h  ObjectManager.inl  PipeManager.h  RenderCommandData.h  RenderManager.h  ShaderData.h  ShaderManager.h
src/engine/shaders/: culling_clear.comp.spv  culling_count.comp.spv  culling_offsets.comp.spv  culling_out_indirect.comp.spv  culling_write.comp.spv  main_pass.frag.spv  main_pass.vert.spv  shadow.vert.spv  shadowECS.vert.spv  shadowECStest.vert.spv  shadow_pass.vert.spv  test_pass.frag.spv  textured.vert.spv  textured3D.vert.spv  textured5.frag.spv  textured6.frag.spv  textured7.frag.spv  texturedLight.vert.spv  texturedMat.vert.spv  texturedSlow.frag.spv  textured_sphere.frag.spv
src/engine/shaders_code/: main_pass.frag.hlsl  main_pass.vert.hlsl  main_pass2.vert  main_pass3.frag  shadow_pass.vert
src/engine/shaders_code/comp/: compute_pass.comp  culling.comp  culling_clear.comp  culling_count.comp  culling_offsets.comp  culling_out_indirect.comp  culling_write.comp  shadow_blur_h.comp.hlsl  shadow_blur_v.comp.hlsl
src/engine/shaders_code/glsl/: main_pass2.vert  main_pass3.frag  shadow_pass.vert
src/engine/shaders_code/main_pass/: debug_pass.frag.hlsl  lighting.hlsl  main_pass.frag.hlsl  main_pass.vert.hlsl  material.hlsl  math.hlsl  shadowPCF.hlsl  shadowVSM.hlsl
src/engine/shaders_code/shadow_pass/: shadow_pass.frag.hlsl  shadow_pass.vert.hlsl
src/engine/src/: BaseComponents.cpp  BaseLight.cpp  BaseScene.cpp  BaseSprite.cpp  BatchBuilder.cpp  BoundSphereDataModule.cpp  BufferManager.cpp  BufferManager_Binds.cpp  BufferManager_Update — копия.cpp  BufferManager_Update.cpp  BufferManager_Utils.cpp  Camera.cpp  CameraManager.cpp  CameraStruct.cpp  CountBufferDataModule.cpp  DefaultRenderPassSet.cpp  DefaultUpdateSet — копия.cpp  DefaultUpdateSet.cpp  Engine.cpp  EngineContext.cpp  FPSCounter.cpp  FrameResources.cpp  InderectDataModule.cpp  LightDataModule.cpp  MaterialManager.cpp  ModelManager.cpp  ObjectManager.cpp  PIB_DataModule.cpp  PipeManager.cpp  PositionFunctions.cpp  RenderCommandData.cpp  RenderManager — копия.cpp  RenderManager.cpp  ResourceManager.cpp  ShaderManager.cpp  ShaderManager_SPVLoad.cpp  ShaderManager_ShadersCreate.cpp  SlotController.cpp  TextureManager.cpp  ThreadController.cpp  (+2 more)
src/engine/src/Новая папка/: MaterialManager.cpp  ObjectManager.cpp  PipeManager.cpp  RenderCommandData.cpp  RenderManager.cpp  ShaderManager.cpp
src/game/: CMakeLists.txt  Game.exp  Game.lib  imgui.ini
src/game/include/: DefaultShaderSet.h  Game.h
src/game/shaders/shader_cache/: main_pass.frag.hlsl.36504e7f304cb235.spv  main_pass.frag.hlsl.5abde93f6e19b235.spv  main_pass.frag.hlsl.faee60817ec18399.spv  main_pass.vert.hlsl.cd3b380df57576ec.spv  shadow_blur_h.comp.hlsl.322d1504485fb11d.spv  shadow_blur_h.comp.hlsl.bd97500b8b94bce7.spv  shadow_blur_v.comp.hlsl.558b6af3be565b79.spv  shadow_blur_v.comp.hlsl.d5e14b964a8355ff.spv  shadow_pass.frag.hlsl.23e6fe717410eaef.spv  shadow_pass.frag.hlsl.2be7214289c6d9bd.spv  shadow_pass.frag.hlsl.c60b2c49a56cb166.spv  shadow_pass.vert.hlsl.d0d2e0e68a6f00e7.spv  shadow_pass.vert.hlsl.fce5c341bab92223.spv  shadow_pass.vert.hlsl.ff5eeb48cec5e400.spv
src/game/src/: DefaultShaderSet.cpp  Game.cpp  main.cpp
src/game/textures/backs/: Thumbs.db
src/sandbox/: CMakeLists.txt
src/sandbox/src/: main.cpp
